
dnl without this order in this file, autoconf will not work!
dnl the argument is a source file out of your sources. But
dnl acinclude.m4 makes the job for all programs ;-)
AC_INIT(acinclude.m4)

KDE_SET_PREFIX

dnl without this order in this file, automake will be confused!
dnl the argument 
AM_CONFIG_HEADER(config.h)

AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)

dnl insert here your program name and version number
KDE_DO_IT_ALL(boson, 0.4)

AC_OUTPUT(Makefile \
	common/Makefile \
	server/Makefile \
	visual/Makefile \
	boson/Makefile \
	boson/docs/Makefile \
	boson/docs/en/Makefile \
	editor/Makefile \
	map/Makefile \
)


